--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -13,6 +13,7 @@
 }
 
 .navbar-mobile {
+  position: absolute;
   align-items: center;
   justify-content: start !important;
 }
@@ -21,4 +22,32 @@
   width: 50%;
   align-items: center;
   justify-content: space-around !important;
+}
+
+.main-logo {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    width: 450px;
+    height: 450px;
+}
+
+#logo-utan-text {
+    width: 100%;
+    height: 100%;
+}
+
+#logo-bara-text {
+    position: absolute;
+    width: 50%;
+    height: 20%;
+    top: 43%;
+}
+
+@media screen and (max-width: 768px) {
+    .main-logo {
+        width: 300px;
+        height: 300px;
+    }
 }
